--- a/src/style.css
+++ b/src/style.css
@@ -68,6 +68,7 @@ html {
     border-radius: 1rem;
 
 }
+
 /* Display style */
 input[type=text] {
 
@@ -134,4 +135,18 @@ background-color: rgb(0, 0, 0);
     color: #62bb47;
     text-align: center
 
+}
+
+/* Images style */
+.twitter, .github {
+
+    transform: scale(0.6);
+    margin: -20px;
+
+}
+
+.twitter {
+
+    transform: scale(0.9);
+    
 }
