--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,9 @@ html {
         margin: 0 auto;
         margin-right: -50%;
         transform: translate(-50%, -50%);
+        -webkit-box-shadow: 11px 11px 8px -2px rgba(0,0,0,0.46);
+        -moz-box-shadow: 11px 11px 8px -2px rgba(0,0,0,0.46);
+        box-shadow: 11px 11px 8px -2px rgba(0,0,0,0.46);
 }
 
 .child {
@@ -89,6 +92,13 @@ input[type=text] {
 }
 
 /* Buttons style */
+.btnr1:hover, .btnr2:hover {
+
+    transition-duration: 0.3s;
+    background-color: #313131;
+
+}
+
 .btnr1 {
 
 background-color: rgb(0, 0, 0);
@@ -148,5 +158,5 @@ background-color: rgb(0, 0, 0);
 .twitter {
 
     transform: scale(0.9);
-    
+
 }
