--- a/src/style.css
+++ b/src/style.css
@@ -84,7 +84,8 @@ input[type=text] {
     text-align: right;
 
     background: transparent;
-    border: none;
+    border: 0 none;
+    outline: 0 none;
     width: 21rem;
 
     font-family: 'Cursed Timer ULiL';
@@ -98,6 +99,8 @@ input[type=text] {
     background-color: #313131;
 
 }
+
+.btnr1:o
 
 .btnr1 {
 
@@ -125,6 +128,8 @@ background-color: rgb(0, 0, 0);
     font-size: 3rem;
     font-family: 'Plat Nomor';
     color: #62bb47;
+    border: 0 none;
+    outline: 0 none;
 
 }
 
